# models.py
@@ -1,4 +1,5 @@
 from flask_login import UserMixin
+from json import JSONEncoder
 from flask_sqlalchemy import SQLAlchemy
 from app import db
 
@@ -16,6 +17,19 @@ class User(UserMixin, db.Model):
     number_of_besties = db.Column(db.String(80), unique = False, nullable = True)
     profile_description = db.Column(db.String(80), unique = False, nullable = True)
     
+    
+    def to_dict(self):
+        return {
+            'id': self.id,
+            'firstname': self.firstname,
+            'lastname': self.lastname,
+            'email': self.email,
+            'username': self.username,
+            'number_of_posts': self.number_of_posts,
+            'number_of_adores': self.number_of_adores,
+            'number_of_besties': self.number_of_besties,
+            'profile_description': self.profile_description,
+        }
     
     
     
